<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ygh="http://schemas.android.com/apk/res/com.example.start_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >
    
    <include layout="@layout/top" />

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >

        <com.example.start_one.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            ygh:icon="@drawable/ic_menu_mylocation"
            ygh:text="@string/location_text"
            ygh:text_size="14sp"
            ygh:color="#ffFF0000" />

        <com.example.start_one.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            ygh:icon="@drawable/icon_more"
            ygh:text="@string/pattern_text"
            ygh:text_size="14sp"
            ygh:color="#ffFF0000" />

        <com.example.start_one.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="4dp"
            ygh:icon="@drawable/menu_feedback_icon"
            ygh:text="@string/message_text"
            ygh:text_size="14sp"
            ygh:color="#ffFF0000" />

        <com.example.start_one.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            ygh:icon="@drawable/profile_normal"
            ygh:text="@string/my_text"
            ygh:text_size="14sp"
            ygh:color="#ffFF0000" />
    </LinearLayout>

</LinearLayout>