<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/android_layout_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_not_logined"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/my_personal_not_login_bg"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="欢迎使用 护理专家"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/personal_login_button"
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_below="@+id/tv_login"
                android:layout_centerHorizontal="true"
                android:background="@drawable/my_personal_click_login"
                android:gravity="center"
                android:text="登录/注册"
                android:textColor="@color/login_button"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/My_message"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/jy_icon_resume"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/my_message"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dip"
                android:background="@color/press_gray" />

            <TextView
                android:id="@+id/contacts_man"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/jy_icon_resume"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/my_contacts"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dip"
                android:background="@color/press_gray" />
            <TextView
                android:id="@+id/my_poision"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/jy_icon_resume"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/my_poision"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dip"
                android:background="@color/press_gray" />

            <TextView
                android:id="@+id/travel_history"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/jy_icon_resume"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/travel_history"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dip"
                android:background="@color/press_gray" />

            <TextView
                android:id="@+id/my_set"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/jy_icon_resume"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/My_set"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dip"
                android:background="@color/press_gray" />

            <TextView
                android:id="@+id/my_regard"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/jy_icon_resume"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/my_regard"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dip"
                android:background="@color/press_gray" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>